--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2008 ZXing authors
  Copyright 2011 Robert Theis
 
@@ -15,19 +14,47 @@
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
- 
- <!-- For color names, see http://en.wikipedia.org/wiki/HTML_color_names -->
- 
+
+<!-- For color names, see http://en.wikipedia.org/wiki/HTML_color_names -->
+
 <resources>
-  <color name="help_button_view">#ffcccccc</color> <!-- help button view background color -->
-  <color name="help_view">#ff404040</color> <!-- background color for entire help view -->
-  <color name="result_minor_text">#ffc0c0c0</color> <!-- source language text/label text color. For example, "OCR English" -->
-  <color name="result_text">#ffffffff</color> <!-- OCR result text color -->
-  <color name="result_view">#b0000000</color> <!-- result view background color -->
-  <color name="status_text">#ffffffff</color> <!-- status_view_top/status_view_bottom text color -->
-  <color name="status_top_text_background">#ffffffff</color> <!-- status_view_top text background color -->
-  <color name="translation_text">#00ccff</color> <!-- translation text color -->
-  <color name="viewfinder_corners">#ffffffff</color> <!-- four corner elements for viewfinder -->
-  <color name="viewfinder_frame">#ffd6d6d6</color> <!-- viewfinder rectangle -->
-  <color name="viewfinder_mask">#60000000</color>  <!-- viewfinder exterior darkened area -->
+    <color name="help_button_view">#ffcccccc</color>
+    <!-- help button view background color -->
+    <color name="help_view">#ff404040</color>
+    <!-- background color for entire help view -->
+    <color name="result_minor_text">#ffc0c0c0</color>
+    <!-- source language text/label text color. For example, "OCR English" -->
+    <color name="result_text">#ffffffff</color>
+    <!-- OCR result text color -->
+    <color name="result_view">#b0000000</color>
+    <!-- result view background color -->
+    <color name="status_text">#ffffffff</color>
+    <!-- status_view_top/status_view_bottom text color -->
+    <color name="status_top_text_background">#ffffffff</color>
+    <!-- status_view_top text background color -->
+    <color name="translation_text">#00ccff</color>
+    <!-- translation text color -->
+    <color name="viewfinder_corners">#ffffffff</color>
+    <!-- four corner elements for viewfinder -->
+    <color name="viewfinder_frame">#ffd6d6d6</color>
+    <!-- viewfinder rectangle -->
+    <color name="viewfinder_mask">#60000000</color>
+    <!-- viewfinder exterior darkened area -->
+
+    <!--GOLOCKY COLORS DONT USE THIS-->
+    <color name="blue_main">#488FE9</color>
+    <color name="blue_balance">#256DC2</color>
+    <color name="blue_fb">#0F4585</color>
+    <color name="blue_drawer">#242F3D</color>
+    <color name="white_locky">#EDF6FF</color>
+    <color name="grey_locky">#DCE2E9</color>
+    <color name="teal_locky">#A9BED8</color>
+    <color name="yellow_locky">#FBC93B</color>
+    <color name="black_locky">#1C1E20</color>
+    <color name="list_item_title">#fff</color>
+    <color name="list_background">#303030</color>
+    <color name="list_background_pressed">#992416</color>
+    <color name="list_divider">#272727</color>
+    <color name="counter_text_bg">#626262</color>
+    <color name="counter_text_color">#c5c4c4</color>
 </resources>
