--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,9 @@
 <resources>
 
-    <!--&lt;!&ndash; Base application theme. &ndash;&gt;-->
-    <!--<style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">-->
-    <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
-    <!--</style>-->
+    <!-- Base application theme. -->
+    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+    </style>
 
     <!--<style name="AppTheme" parent="AppTheme.Base"/>-->
 
@@ -12,5 +12,9 @@
     <!--<item name="colorPrimaryDark">@color/colorPrimary</item>-->
     <!--<item name="android:windowNoTitle">true</item>-->
     <!--<item name="windowActionBar">false</item>-->
+    <!--</style>-->
+
+    <!-- Base application theme. -->
+    <!--<style name="AppTheme" parent="android:Theme.Material.Light">-->
     <!--</style>-->
 </resources>
