--- a/app/src/main/res/layout/activity_main_drawer.xml
+++ b/app/src/main/res/layout/activity_main_drawer.xml
@@ -8,10 +8,22 @@
 
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
-    <FrameLayout
-        android:id="@+id/container"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar" />
+
+        <FrameLayout
+        android:id="@+id/container"
+            android:layout_below="@id/toolbar"
+
+        android:layout_width="match_parent"
+            android:layout_height="match_parent"></FrameLayout>
+    </RelativeLayout>
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
          this as a sliding drawer on the left side for left-to-right
@@ -23,11 +35,11 @@
         android:layout_width="240dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/blue_drawer"
         android:choiceMode="singleChoice"
+        android:clickable="false"
         android:divider="@android:color/transparent"
         android:dividerHeight="10dp"
-        android:listSelector="@drawable/list_selector"
-        android:background="@color/blue_drawer"
-        android:clickable="false"
-        android:drawSelectorOnTop="false" />
+        android:drawSelectorOnTop="false"
+        android:listSelector="@drawable/list_selector" />
 </android.support.v4.widget.DrawerLayout>
