--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,9 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-    </style>
+    <!--&lt;!&ndash; Base application theme. &ndash;&gt;-->
+    <!--<style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar">-->
+    <!--&lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+    <!--</style>-->
 
     <!--<style name="AppTheme" parent="AppTheme.Base"/>-->
 
@@ -17,4 +17,7 @@
     <!-- Base application theme. -->
     <!--<style name="AppTheme" parent="android:Theme.Material.Light">-->
     <!--</style>-->
+    <style name="MyToolbar" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:textColorPrimary">@color/white_locky</item>
+    </style>
 </resources>
