--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,10 +7,13 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="android:textColorHighlight">@color/white_locky</item>
-        <item name="android:colorAccent">@color/teal_locky</item>
+
         <item name="android:color">@color/white_locky</item>
         <item name="android:text">@color/teal_locky</item>
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
+
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
+
     </style>
 </resources>
