--- a/app/src/main/res/layout/activity_main_drawer.xml
+++ b/app/src/main/res/layout/activity_main_drawer.xml
@@ -18,11 +18,10 @@
             layout="@layout/toolbar" />
 
         <FrameLayout
-        android:id="@+id/container"
-            android:layout_below="@id/toolbar"
-
-        android:layout_width="match_parent"
-            android:layout_height="match_parent"></FrameLayout>
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/toolbar" />
     </RelativeLayout>
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
@@ -30,16 +29,56 @@
          languages and on the right side for right-to-left languages.
          If you're not building against API 17 or higher, use
          android:layout_gravity="left" instead. -->
-    <ListView
-        android:id="@+id/list_slidermenu"
-        android:layout_width="240dp"
+    <RelativeLayout
+        android:id="@+id/linearLayoutDrawer"
+        android:layout_width="304dp"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@color/blue_drawer"
-        android:choiceMode="singleChoice"
-        android:clickable="false"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="10dp"
-        android:drawSelectorOnTop="false"
-        android:listSelector="@drawable/list_selector" />
+        android:orientation="vertical"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_gravity="start">
+
+        <ImageView
+            android:id="@+id/imageViewDrawer"
+            android:layout_width="304dp"
+            android:layout_height="150dp"
+            android:layout_gravity="start"
+            android:contentDescription="thing"
+            android:scaleType="centerCrop"
+            android:src="@drawable/test1" />
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="start"
+            android:id="@+id/imageViewFBProfileImage"
+            android:layout_marginLeft="16dp"
+            android:contentDescription="profile pic"
+            android:layout_marginTop="16dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Text"
+            android:textColor="@color/white_locky"
+            android:id="@+id/textViewFacebookName"
+            android:layout_below="@+id/imageViewFBProfileImage"
+            android:layout_alignLeft="@+id/imageViewFBProfileImage"
+            android:layout_alignStart="@+id/imageViewFBProfileImage"
+            android:textSize="14sp"
+            android:layout_marginTop="8dp" />
+
+        <ListView
+            android:id="@+id/list_slidermenu"
+            android:layout_width="304dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:background="@color/white_locky"
+            android:choiceMode="singleChoice"
+            android:clickable="false"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="10dp"
+            android:drawSelectorOnTop="false"
+            android:listSelector="@drawable/list_selector"
+            android:layout_below="@+id/imageViewDrawer" />
+    </RelativeLayout>
 </android.support.v4.widget.DrawerLayout>
