--- a/app/src/main/res/layout/fragment_balance.xml
+++ b/app/src/main/res/layout/fragment_balance.xml
@@ -11,18 +11,18 @@
         android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentLeft="false"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="0dp"
+        android:layout_marginLeft="20dp"
         android:layout_marginTop="0dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginRight="20dp"
+        android:layout_centerHorizontal="true">
 
-        <TextView
+        <com.devspark.robototextview.widget.RobotoTextView
             android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Ciclo: "
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            style="@style/TextViewMainPage"
+            android:text="Ciclo: " />
 
         <Spinner
             android:id="@+id/spinnerCycleSelector"
@@ -35,7 +35,7 @@
     <LinearLayout
         android:id="@+id/layoutBalanceContainer"
         android:layout_width="fill_parent"
-        android:layout_height="200dp"
+        android:layout_height="175dp"
         android:layout_alignEnd="@+id/buttonFBOpenGraph"
         android:layout_alignRight="@+id/buttonFBOpenGraph"
         android:layout_below="@+id/linearLayout2"
@@ -50,92 +50,47 @@
         android:layout_alignEnd="@+id/buttonFBOpenGraph"
         android:layout_alignRight="@+id/buttonFBOpenGraph"
         android:layout_below="@+id/layoutBalanceContainer"
-        android:padding="5dp"
         card_view:cardCornerRadius="4dp">
 
-    <LinearLayout
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="Fecha Limite:"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textIsSelectable="false"
-                    android:textSize="20sp" />
+            <com.devspark.robototextview.widget.RobotoTextView
+                android:id="@+id/textView"
+                style="@style/TextViewMainPageLabel"
+                android:text="Fecha Limite:"
+                android:textIsSelectable="false" />
 
-                <TextView
-                    android:id="@+id/textViewBillingDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:text="26 de Nov 2014"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textIsSelectable="false"
-                    android:textSize="20sp" />
+            <com.devspark.robototextview.widget.RobotoTextView
+                android:id="@+id/textViewBillingDate"
+                style="@style/TextViewMainPage"
+                android:text="26 de Nov 2014"
+                android:textIsSelectable="true" />
 
-            </LinearLayout>
+            <com.devspark.robototextview.widget.RobotoTextView
+                android:id="@+id/textView3"
+                style="@style/TextViewMainPageLabel"
+                android:text="Consumo Total:" />
 
-            <LinearLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
+            <com.devspark.robototextview.widget.RobotoTextView
+                android:id="@+id/textViewTotalBalance"
+                style="@style/TextViewMainPage"
+                android:text="$100.00" />
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Consumo Total:"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="20sp" />
+            <com.devspark.robototextview.widget.RobotoTextView
+                android:id="@+id/textView2"
+                style="@style/TextViewMainPageLabel"
+                android:text="Realizada el dia:" />
 
-                <TextView
-                    android:id="@+id/textViewTotalBalance"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="$100.00"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="20sp" />
+            <com.devspark.robototextview.widget.RobotoTextView
+                android:id="@+id/textViewLastReadingDate"
+                style="@style/TextViewMainPage"
+                android:text="2 de Nov 2014" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Realizada el dia:"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/textViewLastReadingDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="2 de Nov 2014"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textSize="20sp" />
-
-            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
@@ -152,41 +107,58 @@
         android:layout_alignBottom="@+id/card_view"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="-32dp"
-        android:layout_marginRight="20dp">
+        android:layout_marginRight="20dp"
+        android:id="@+id/relativeLayout">
 
         <com.melnykov.fab.FloatingActionButton
-            android:id="@+id/fab"
+            android:id="@+id/fabPay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_payment_white_24dp"
             fab:fab_colorNormal="@color/colorPrimary"
-            fab:fab_colorPressed="@color/colorPrimary" />
+            fab:fab_colorPressed="@color/colorPrimaryDarker" />
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/buttonPay"
+    <!--Scan button-->
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="408dp"
-        android:layout_marginTop="1299dp"
-        android:text="Pagar" />
+        android:layout_alignLeft="@+id/relativeLayout"
+        android:layout_above="@+id/relativeLayout">
 
-    <Button
-        android:id="@+id/buttonFBOpenGraph"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="267dp"
-        android:layout_marginTop="1503dp"
-        android:background="@drawable/com_facebook_button_blue"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:text="Share on Facebook" />
+        <com.melnykov.fab.FloatingActionButton
+            android:id="@+id/fabScan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_camera_alt_white_24dp"
+            fab:fab_colorNormal="@color/colorPrimary"
+            fab:fab_colorPressed="@color/colorPrimaryDarker" />
+    </RelativeLayout>
+
+    <!--<Button-->
+    <!--android:id="@+id/buttonPay"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentLeft="true"-->
+    <!--android:layout_alignParentTop="true"-->
+    <!--android:layout_gravity="center_horizontal"-->
+    <!--android:layout_marginLeft="408dp"-->
+    <!--android:layout_marginTop="1299dp"-->
+    <!--android:text="Pagar" />-->
+
+    <!--<Button-->
+    <!--android:id="@+id/buttonFBOpenGraph"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_alignParentLeft="true"-->
+    <!--android:layout_alignParentTop="true"-->
+    <!--android:layout_gravity="center_horizontal"-->
+    <!--android:layout_marginLeft="267dp"-->
+    <!--android:layout_marginTop="1503dp"-->
+    <!--android:background="@drawable/com_facebook_button_blue"-->
+    <!--android:paddingLeft="20dp"-->
+    <!--android:paddingRight="20dp"-->
+    <!--android:text="Share on Facebook" />-->
 
     <!--<Button-->
     <!--android:layout_width="wrap_content"-->
