--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -60,6 +60,9 @@
 
     <color name="colorPrimary">#00C0A5</color>
     <color name="colorPrimaryDarker">#ff00574b</color>
-    <color name="greyWater">#F5F5F5</color>
+    <color name="whiteWater">#F5F5F5</color>
+    <color name="blackWater">#1C1E20</color>
+    <color name="greyWater">#ff646369</color>
+
 
 </resources>
